# data-mining

./: .buildinfo  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  environment.yml  genindex.html  intro.html  objects.inv  pyproject.toml  req.txt  requirements.txt  search.html  searchindex.js  system_requirements_pytorch_23_02_py3.txt
.devcontainer/: Dockerfile  Dockerfile.pytorch  Dockerfile.tensorflow  devcontainer.json
.github/workflows/: deploy.yml
_sources/: intro.md
_sources/aiml-common/: CODE-OF-CONDUCT.md
_sources/aiml-common-assignments-projects/assignments/: probability-assignment-2.ipynb
_sources/aiml-common-assignments-projects/projects/: _index.md
_sources/aiml-common/assignments/: maximum-likelihood-assignment.md  probability-assignment-2.ipynb
_sources/aiml-common/lectures/: runbook.md
_sources/aiml-common/projects/: _index.md
_sources/aiml-common/resources/: _index.md  env.md
_sources/syllabus/: index.md
aiml-common/: CODE-OF-CONDUCT.html  _index.html
aiml-common-assignments-projects/assignments/: gaussian-processes-assignment.html  learning-problem-assignment.html  maximum-likelihood-assignment.html  probability-assignment-2.html  xgboost-dask.html
aiml-common-assignments-projects/assignments/cnn-rnn/: _index.html
aiml-common-assignments-projects/assignments/mle-poisson-assignment/: _index.html
aiml-common-assignments-projects/assignments/neural-networks/: _index.html  answers.html
aiml-common-assignments-projects/assignments/probability-assignment/: _index.html
aiml-common-assignments-projects/projects/: _index.html
aiml-common-assignments-projects/projects/big-transfer/: _index.html
aiml-common-assignments-projects/projects/btc-forecasting/: _index.html
aiml-common-assignments-projects/projects/collaborative-robotics/: _index.html
aiml-common-assignments-projects/projects/continual-learning-CORe50/: _index.html
aiml-common-assignments-projects/projects/deep-farmer-robotics/: _index.html
aiml-common-assignments-projects/projects/deep-planning/: _index.html
aiml-common-assignments-projects/projects/fairness/: _index.html
aiml-common-assignments-projects/projects/fake-news/: _index.html
aiml-common-assignments-projects/projects/going-back-to-work/: _index.html
aiml-common-assignments-projects/projects/house-prices/: _index.html
aiml-common-assignments-projects/projects/imu-classification/: _index.html
aiml-common/assignments/: gaussian-processes-assignment.html  learning-problem-assignment.html  maximum-likelihood-assignment.html  probability-assignment-2.html  xgboost-dask.html
aiml-common/lectures/: _index.html  runbook.html
aiml-common/projects/: _index.html
aiml-common/resources/: _index.html  env.html
data_mining/: _config.yml  _toc.yml  ai.bib  conf.py  intro.md
data_mining/aiml-common-assignments-projects/: README.md
data_mining/syllabus/: _index.md  index.md  syllabus.docx
docker/: Dockerfile.pytorch  Dockerfile.tensorflow
syllabus/: _index.html  index.html
(+700 files in other folders)
