[tool.poetry]
name = "data-mining-book"
version = "0.1.0"
description = ""
authors = ["Pantelis Monogioudis <pantelis.monogioudis@aegean.ai>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "data_mining_book"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyter-book = "^0.13.1"
numpy = "^1.24.1"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
sphinxcontrib-youtube = "^1.2.0"
sphinxcontrib-svg2pdfconverter = "^1.2.1"
sphinx-proof = "^0.1.3"
sphinx-inline-tabs = "^2022.1.2b11"
sphinxext-rediraffe = "^0.2.7"
sphinx-autobuild = "^2021.3.14"
sphinx-panels = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
