[tool.poetry]
name = "back2classroom-data-mining"
version = "0.1.0"
description = ""
authors = ["Pantelis Monogioudis <pantelis.monogioudis@aegean.ai>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "b2c"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jupyter-book = "^0.15.1"
sphinx-book-theme = "^1.0.0"
sphinxcontrib-youtube = "^1.2.0"
sphinxcontrib-svg2pdfconverter = "^1.2.1"
sphinx-proof = "^0.1.3"
sphinx-inline-tabs = "^2022.1.2b11"
sphinxext-rediraffe = "^0.2.7"
sphinx-autobuild = "^2021.3.14"
sphinx-panels = "^0.6.0"
sphinxcontrib-mermaid = "^0.8"
sphinxcontrib-seqdiag = "^3.0.0"
libarchive-c = "^4.0"
numpy = "^1.23.0"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
pycocotools = "^2.0.6"
scikit-image = "^0.20.0"
tensorflow = "2.12.0"
torch = "^2.0.0"
torchvision = "^0.15.0"
torchtext = "^0.15.0"
kaggle = "^1.5.13"
xgboost = "^1.7.4"
panel = "^0.14.4"
ray = {extras = ["tune"], version = "^2.3.0"}
tune-sklearn = "^0.4.5"
matplotlib = "^3.7.1"
jax = "^0.4.5"
distributed = "^2023.3.0"
modin = "^0.18.1"
jaxlib = "^0.4.4"
opencv-python = "^4.7.0.72"
sphinxcontrib-bibtex = "^2.5.0"
transformers = "^4.27.4"
nltk = "^3.8.1"
spacy = "^3.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
